--- a/csgo/cfg/gamemode_competitive_server.cfg
+++ b/csgo/cfg/gamemode_competitive_server.cfg
@@ -81,8 +81,10 @@
     sv_pure 1
     sv_spawn_afk_bomb_drop_time 30            // Players that spawn and don't move for longer than sv_spawn_afk_bomb_drop_time (default 15 seconds) will automatically drop the bomb.
     sv_steamgroup_exclusive 0                 // If set, only members of Steam group will be able to join the server when it's empty, public people will be able to join the server only if it has players.
-    bot_quota "0"                             // Determines the total number of bots in the game
+    bot_quota "6"                             // Determines the total number of bots in the game
+	bot_quota_mode fill						  // Determines the type of quota. Allowed values: 'normal', 'fill', and 'match'.
 
+	
 //ROUND TIME SETTINGS
     mp_maxrounds 30                           // max number of rounds to play before server changes maps
     mp_force_pick_time 160                    // The amount of time a player has on the team screen to make a selection before being auto-teamed 
