--- a/csgo/cfg/server.cfg
+++ b/csgo/cfg/server.cfg
@@ -12,7 +12,7 @@ sv_rcon_maxfailures 3                   //Max number of times a user can fail rc
 sv_rcon_minfailures 5                   //Number of times a user can fail rcon authentication in sv_rcon_minfailuretime before being banned
 sv_rcon_minfailuretime 10               //Number of seconds to track failed rcon authentications
 
-sv_downloadurl "http://content.lan/downloads/csgo" //Location from which clients can download missing files
+sv_downloadurl "http://content.lacledeslan.net/downloads/csgo" //Location from which clients can download missing files
 
 
 //gotv
