--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,20 +1,20 @@
 # escape=`
 
-FROM lacledeslan/gamesvr-srcds-csgo:linux
+FROM lacledeslan/gamesvr-csgo
 
 LABEL maintainer "Laclede's LAN <contact@lacledeslan.com>"
 
-ENV IMAGE="gamesvr-srcds-csgo-test:linux"
+ENV IMAGE="gamesvr-csgo-test"
 
 HEALTHCHECK NONE
 
+COPY ./dist /app/csgo/
+
+COPY ./dist.linux /app/csgo/
+
 # UPDATE USERNAME
-RUN usermod -l CSGO.Test CSGO
+RUN usermod -l CSGOTest CSGO
 
-USER CSGO.Test
+USER CSGOTest
 
-COPY ./dist /app/bin/
-
-COPY ./dist.linux /app/bin/csgo/
-
-WORKDIR /app/bin/
+WORKDIR /app/
