--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -2,9 +2,13 @@
 
 FROM lacledeslan/gamesvr-csgo
 
-LABEL maintainer "Laclede's LAN <contact@lacledeslan.com>"
-
-ENV IMAGE="gamesvr-csgo-test"
+LABEL MAINTAINER="Laclede's LAN <contact@lacledeslan.com>" `
+      org.label-schema.url="https://github.com/LacledesLAN" `
+      org.label-schema.vendor="Laclede's LAN" `
+      org.label-schema.vcs-ref=$VCS_REF `
+      org.label-schema.name="gamesvr-csgo-test" `
+      org.label-schema.description="LL Counter-Strike GO Client Test Server" `
+      org.label-schema.vcs-url="https://github.com/LacledesLAN/gamesvr-csgo-test"
 
 HEALTHCHECK NONE
 
