--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -15,9 +15,13 @@ LABEL maintainer="Laclede's LAN <contact @lacledeslan.com>" `
       org.label-schema.description="LL Counter-Strike GO Client-Test Server" `
       org.label-schema.vcs-url="https://github.com/LacledesLAN/gamesvr-csgo-test"
 
+# `RUN true` lines are work around for https://github.com/moby/moby/issues/36573
 COPY --chown=CSGO:root ./sourcemod.linux /app/csgo/
+RUN true
 COPY --chown=CSGO:root ./sourcemod-configs /app/csgo/
+RUN true
 COPY --chown=CSGO:root ./dist /app/
+RUN true
 COPY --chown=CSGO:root ./ll-tests /app/ll-tests
 
 # UPDATE USERNAME & ensure permissions
