--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,11 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build",
+            "label": "Build Linux Image",
             "type": "shell",
-            "command": "docker pull lacledeslan/gamesvr-csgo; docker build . -f Dockerfile.linux -t ll/gamesvr-csgo-test --no-cache --build-arg BUILDNODE=$env:computername;",
+            "command": "docker pull lacledeslan/gamesvr-csgo; docker build . -f linux.Dockerfile -t ll/gamesvr-csgo-test --no-cache --build-arg BUILDNODE=$env:computername;",
             "dependsOn": "download-sub-modules",
             "group": "build",
-            "identifier": "build-image",
             "problemMatcher": [],
             "promptOnClose": true
         },
@@ -17,7 +16,7 @@
             "label": "Build & Execute Self Tests",
             "type": "shell",
             "command": "docker run -it --rm ll/gamesvr-csgo-test ./ll-tests/gamesvr-csgo-test.sh;",
-            "dependsOn": "build-image",
+            "dependsOn": "Build Linux Image",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -29,7 +28,7 @@
             "label": "Build & Run Interactive Server",
             "type": "shell",
             "command": "docker run -it --net=host ll/gamesvr-csgo-test docker run -it --rm --net=host lacledeslan/gamesvr-csgo-test ./srcds_run -game csgo +game_type 0 +game_mode 1 -tickrate 128 +mapgroup ll_orange +map orangebox_warmup_day +sv_lan 1 +usercon +rcon_password \"test123\";",
-            "dependsOn": "build-image",
+            "dependsOn": "Build Linux Image",
             "group": "build",
             "problemMatcher": [],
             "promptOnClose": true
@@ -38,7 +37,7 @@
             "label": "Build & Shell In",
             "type": "shell",
             "command": "docker run -it --net=host --rm ll/gamesvr-csgo-test;",
-            "dependsOn": "build-image",
+            "dependsOn": "Build Linux Image",
             "group": "build",
             "problemMatcher": [],
             "promptOnClose": true
@@ -47,7 +46,6 @@
             "label": "Download git submodules",
             "type": "shell",
             "command": "git submodule foreach git pull origin master;",
-            "identifier": "download-sub-modules",
             "problemMatcher": [],
             "promptOnClose": true
         },
